# 2024-2_ROKEYBOOTCAMP_Collaborative_robot_project_3

./: .gitignore  README.md
urdf_2ws/: teleop.sh  teleop_tb2.sh  turtlebot3_multi.sh
urdf_2ws/com_sh/: make_map.sh
urdf_ws/: tutorial_rqt.sh  tutorial_source_rviz.sh  tutorial_tran.sh
urdf_ws/command_bash/: tutorial_gaze.sh  tutorial_robot_1.sh  tutorial_robot_2.sh  tutorial_robot_2_img.sh  tutorial_simul_1.sh
ws/: 1.py  2.py  build.sh  gazebo.sh  gui.py  gui2.py  joint_gui.sh  make_turtle.sh  mar.sh  robot1_move.py  robot2_move.py  teleop.sh
ws/com_sh/: MainServer.sh  (+14 more)
ws/src/mars_plan/: package.xml  setup.cfg  setup.py
ws/src/mars_plan/launch/: gold.launch.py  mars.launch.py  prove.launch.py  waypoint_follower_launch.py
ws/src/mars_plan/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  slam_launch.py
ws/src/mars_plan/map/: map.pgm  map.yaml
ws/src/mars_plan/mars_plan/: GoldDetector.py  MainServer.py  Patro_Return_NAV.py  Patrol_Return_NAV.py  RobotControlUI.py  UI_Node.py  UserCommand.py  camera_opencv.py  camera_opencv_old.py  camera_opencv_rb1.py  camera_opencv_rb2.py  cancel.py  control_gui.py  control_gui.sh  control_gui_solo.py  control_gui_solo.sh  mars_plan_build.sh  obj_ctl.py  random_box_spawner.py
ws/src/mars_plan/models/turtlebot3_waffle/: model.sdf
ws/src/mars_plan/params/: map.pgm  map.yaml
ws/src/mars_plan/urdf/: blue.urdf  boom.urdf  boom_eft.urdf  boom_eft2.urdf  boom_eft3.urdf  gazebo.xacro  gold.sdf  turtlebot3_waffle.xacro
ws/src/mars_plan/worlds/: custom_world.world  mars.world
ws_new/: ~clear.pgm  ~clear.yaml
(+62 files in other folders)
